feat: support shared and general expenses
